<resources>
    <string name="app_name">Mel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cert_incoming">Pairing Attempt!</string>
    <string name="coupleNotificationCertTitle">Pairing Attempt!</string>
    <string name="coupleNotificationCertText">Your Mel instance wants to get to know another one.</string>
    <string name="slogan">No Clouds included!</string>
    <string name="permanentNotification">This notification prevents Mel from being shut down.</string>
    <string name="btnOk">Ok</string>
    <string name="titleHelp">Help</string>
    <string name="accessHelp">Left column: all other Mel instances known to you. When clicking on one of them the right column will show all existing services. Ticking the boxes will allow the other instance to talk to this specific Service.</string>
    <string name="createServiceHelp">You can create new Services here. Remember: Services are not allowed to \"talk\" to any other instances by default. You can change that in the Access view. Before a service can be created you must grant the required permissions so it can do its job.</string>
    <string name="infoHelp">Shows the current status of the background service and some additional info. You can see all running services and settings in the navigator on the left.</string>
    <string name="logcatHelp">Usually you do not need this. If something goes wrong and you cannot currently debug this is the place to look at.</string>
    <string name="discoveryHelp">Finds other instances of Mel in the current Wifi. This requires Broadcasting to be working on your network. Broadcast are sent on port 9966.</string>
    <string name="connectedHelp">List of instances that your device already knows and can connect with. Currently connected instances are highlighted.</string>
    <string name="settingsHelp">You can adjust your name and ports here. Your name will appear on other devices once paired. The ports are used to connect (directly - if broadcasting does not work) and Broadcast port is fixed to 9966. When you are done with coupling you may create new Services and allow them to \"talk\" to the other instances. </string>
    <string name="editServiceHelp">Shows things that you can change on this currently running Service.</string>
    <string name="settingsName">Name</string>
    <string name="settingsConnectionSettings">Connection Settings</string>
    <string name="settingsPort">Port</string>
    <string name="settingsCertPort">Cert-Port</string>
    <string name="settingsApply">Apply</string>
    <string name="settingsStartStop">Start/Stop</string>
    <string name="settingsPowerSettings">Power Settings</string>
    <string name="settingsHeavyWorkWhenPlugged">Always do heavy work when plugged</string>
    <string name="settingsHeavyWorkNoWifi">Allow heavy work when WiFi is off</string>
    <string name="settingsHeavyWorkHint">*Heavy work might drain your battery. It allows things like file indexing.</string>
    <string name="infoNoOfServices">No of Services</string>
    <string name="infoStopped">Stopped</string>
    <string name="infoStarted">Status</string>
    <string name="accessKnownCerts">Known Instances</string>
    <string name="accessAvailableServices">Available Services  (on this device)</string>
    <string name="connectedTitle">Connected Instances</string>
    <string name="accessTitle">Access</string>
    <string name="createServiceTitle">Create Service</string>
    <string name="infoTitle">Info</string>
    <string name="logcatTitle">Logcat</string>
    <string name="discoverTitle">Pairing</string>
    <string name="settingsTitle">Settings</string>
    <string name="editServiceTitle">Edit Service</string>
    <string name="drawerTitle">Mel itself</string>
    <string name="drawerServices">Services</string>
    <string name="drawerCreateNewService">Create New Service</string>
    <string name="discoverBtnCouple">Pair</string>
    <string name="discoverUnknown">Unknown</string>
    <string name="discoverKnown">Known</string>
    <string name="showIntro" translatable="false">introShown</string>
    <string name="firstStart">Welcome to Mel. This app can couple with other instances running on your network. When you have done that you may create a Service and grant access to the other instances. You will find a Help button on the top right which explains what all the things are good for.</string>
    <string name="editServiceApply">Apply</string>
    <string name="editServiceName">Name</string>
    <string name="createServiceName">Name</string>
    <string name="editServiceDrivePath">Path</string>
    <string name="editServiceDriveChoose">Choose6</string>
    <string name="settingsMisc">Miscellaneous</string>
    <string name="settingsStartDialog">Show startup dialog again</string>
    <string name="settingsShow">Intro</string>
    <string name="settingsRedirectSysOut">Show Sysout</string>
    <string name="infoSSID">Wifi</string>
    <string name="infoNotConnected">not connected to Wifi</string>
    <string name="infoIP">IP address</string>
    <string name="coupleReject">Reject</string>
    <string name="coupleAccept">Accept</string>
    <string name="coupleRemoteRejectToast">Other side rejected the request :(</string>
    <string name="coupleLocalRejectToast">You rejected the pairing.</string>
    <string name="coupleProgressWaitForRemote">Status of remote confirmation:</string>
    <string name="coupleNotificationCertTitleCompleted">Pairing successful</string>
    <string name="coupleNotificationCertTextCompleted">You can setup services now.</string>
    <string name="coupleNotificationCertTextRemoteRejected">Your pairing request was rejected.</string>
    <string name="coupleNotificationCertTitleRemoteRejected">Pairing rejected remotely</string>
    <string name="coupleNotificationRemotePendingText">Waiting for the other side to accept.</string>
    <string name="coupleNotificationRemotePendingTitle">Pending answer</string>
    <string name="editServiceDriveMaxDays">Max age of items in wastebin in days</string>
    <string name="editServiceDriveUnimportant">Optional Settings for wastebin</string>
    <string name="editServiceDriveToastOOS">Not enough space!</string>
    <string name="editServiceDriveMaxSize">max wastebin size</string>
    <string name="lblSideLeft">Remote Files</string>
    <string name="lblSideRight">Local Files</string>
    <string name="delete">Delete</string>
    <string name="state">Undetermined State</string>
    <string name="btnDeactivate">Deactivate</string>
    <string name="requestLocationReason">The location permission ist needed to get proper Wifi information from Android. Eg: Android 8+ will not return an SSID if not granted. No location data is send anywhere. Tap here to grant permission.</string>
    <string name="infufficientPermissions">You did not grant all necessary persmissions to run this service :(</string>
    <string name="btnCreate">Create</string>
    <string name="btnCreateRequestPerm">Request permissions</string>
    <string name="confirmCertDeletionMessage">Do you really want to delete that certificate? You won\'t be able to communicate until you pair again.</string>
    <string name="btnCancel">Cancel</string>
    <string name="confirmCertDeletionTitle">AAACHTUNG!!!</string>
    <string name="notificationCertNotDeleted">You sissy!</string>
    <string name="dirChooserTitle">Choose a Directory</string>
    <string name="chooseStorageTitle">Choose Storage Volume</string>
    <string name="toastDrivePermissionsRequired">Cannot choose a working directory for the drive service unless you grant the required permission.</string>
    <string name="driveChoosePath">Please choose a storage directory</string>
    <string name="invalidDirectory">The chosen directory is invalid.</string>
    <string name="permissionDriveWriteMessage">Write permission to external storage is required since Android introduced the storage access framework which is rubbish. So I replaced the java.io.File by something that works and requires the permission. Please grant the write permission in the next dialog and select the root directory of your external sd card thereafter.</string>
    <string name="permissionRequiredTitle">Permission required.</string>
    <string name="btnActivate">Activate</string>
    <string name="stateStopped">Stopped</string>
    <string name="stateRunning">Running</string>
    <string name="stateDeactivated">Deactivated</string>
    <string name="exit">Exit</string>
    <string name="btnServer">Server</string>
    <string name="btnClient">Mobile</string>
    <string name="powerRun">run</string>
    <string name="powerStop">stop</string>
    <string name="intro_1_booting">Starting up the background service...</string>
    <string name="intro_1_booted">Background service started. We can begin. Click next.</string>
    <string name="intro_1_title">Let\'s setup!</string>
    <string name="intro_2_title">Give it a name!</string>
    <string name="intro_2_lblName">Name:</string>
    <string name="intro_2_hint">type something</string>
    <string name="intro_2_explanation">This is the name this device will have when it is connected to other devices. For privacy reasons your name will not be send to unknown devices.</string>
    <string name="intro_2_error_too_short">The name is too short.</string>
    <string name="intro_3_title">Save Battery?</string>
    <string name="intro_3_lblPresets">Choose a preset:</string>
    <string name="intro_3_btnPowerMobile">Mobile</string>
    <string name="intro_3_btnPowerServer">Server</string>
    <string name="intro_4_caption1">1) Install on another device</string>
    <string name="intro_4_explanation1">If you want to synchronize data you have to install this software on another Android phone or Laptop/PC. Install Synchronisator there as well, set it up like this instance and continue with the next step.</string>
    <string name="intro_4_caption2">2) Pair your Devices</string>
    <string name="intro_4_explanation2">Before your Devices can talk to each other you have to pair them. To do so both must be in the same network. Go to the menu \'Pair\'. The help button provides further assistance.</string>
    <string name="intro_4_caption3">3) Synchronize something</string>
    <string name="intro_4_explanation3">Tip on \'New Service\' in the menu. A Services provides data your devices can synchronize to others. Currently you can sync your phone book or whole directories.</string>
    <string name="intro_4_caption4">4) Allow access</string>
    <string name="intro_4_explanation4">Tap on \'Access\' and grant a paired device access to a service. (When you just created a service it is not allowed to talk to any device. This also means that it is invisible for those devices.)</string>
    <string name="intro_4_caption5">Info</string>
    <string name="intro_4_explanation5">You can re-run this dialog by going to \'Settings\' and tip \'Show Intro dialog\'.</string>
    <string name="powergrid_wifi_off">Wifi Off</string>
    <string name="powergrid_wifi_on">Wifi On</string>
    <string name="powergrid_power_off">AC Off</string>
    <string name="powergrid_power_on">AC On</string>
    <string name="permissionsExplainAllTitle">Manage external storage</string>
    <string name="permissionExplainAllText">Allows Mel to work around that stupid Storage Access Framework.</string>
    <string name="btnGrant">Grant</string>
    <string name="infoNotification">Notifications</string>
</resources>