<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constrainedWidth="true">


    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        app:layout_constrainedWidth="true"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/text_margin"
        android:paddingTop="@dimen/text_margin"
        android:text="@string/permissionsExplainAllTitle"
        android:textSize="@dimen/tvTitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/btnGrant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textText"
        android:layout_width="0dp"
        app:layout_constrainedWidth="true"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/text_margin"
        android:paddingBottom="@dimen/text_margin"
        android:text="@string/permissionExplainAllText"
        app:layout_constraintEnd_toStartOf="@id/btnGrant"
        app:layout_constraintStart_toStartOf="@+id/textTitle"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />

    <Button
        android:id="@+id/btnGrant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGrant"
        app:layout_constraintBottom_toBottomOf="@id/textText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textTitle"/>
</androidx.constraintlayout.widget.ConstraintLayout>