<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"

    android:id="@+id/choice_grid"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:padding="4dp"

    grid:alignmentMode="alignBounds"
    grid:columnCount="5"
    grid:rowOrderPreserved="false"
    grid:useDefaultMargins="true">

    <TextView
        grid:layout_column="0"
        grid:layout_columnWeight="0.3"
        grid:layout_gravity="fill_horizontal"
        grid:layout_row="1" />

    <TextView
        grid:layout_column="4"
        grid:layout_columnWeight="1"
        grid:layout_gravity="fill_horizontal"
        grid:layout_row="1" />


    <TextView
        android:id="@+id/lblAon"
        android:text="@string/powergrid_wifi_on"
        grid:layout_column="2"
        grid:layout_gravity="fill_horizontal"
        grid:layout_row="0" />

    <TextView
        android:id="@+id/lblAoff"
        android:text="@string/powergrid_wifi_off"
        grid:layout_column="3"
        grid:layout_gravity="fill_horizontal"
        grid:layout_row="0" />

    <TextView
        android:id="@+id/lblBon"
        android:text="@string/powergrid_power_on"
        grid:layout_column="1"
        grid:layout_gravity="fill_horizontal"
        grid:layout_row="1" />

    <TextView
        android:id="@+id/lblBoff"
        android:text="@string/powergrid_power_off"
        grid:layout_column="1"
        grid:layout_gravity="fill_horizontal"
        grid:layout_row="2" />

    <LinearLayout
        android:id="@+id/lTT"
        android:background="@color/colorListSelected"
        grid:layout_column="2"
        grid:layout_columnWeight="1"
        grid:layout_gravity="fill_horizontal"
        grid:layout_row="1">

        <Button
            android:id="@+id/btnTT"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:background="#FF33B5E5"
            android:gravity="center"
            android:text="aa" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lTF"
        android:background="@color/colorListSelected"
        grid:layout_column="3"
        grid:layout_columnWeight="1"
        grid:layout_gravity="fill_horizontal"
        grid:layout_row="1">

        <Button
            android:id="@+id/btnTF"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:background="#FF33B5E5"
            android:gravity="center"
            android:text="AB" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lFT"
        android:background="@color/colorListSelected"
        grid:layout_column="2"
        grid:layout_gravity="fill_horizontal"
        grid:layout_row="2">

        <Button
            android:id="@+id/btnFT"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:background="#FF33B5E5"
            android:gravity="center"
            android:text="BA" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lFF"
        android:background="@color/colorListSelected"
        grid:layout_column="3"
        grid:layout_gravity="fill_horizontal"
        grid:layout_row="2">

        <Button
            android:id="@+id/btnFF"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:background="#FF33B5E5"
            android:gravity="center"
            android:text="BB" />
    </LinearLayout>


</androidx.gridlayout.widget.GridLayout>