<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tbl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/lblHint"
        android:visibility="gone"
        android:background="@color/colorLabelBackground"
        android:textColor="@color/colorAccent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <TextView
        android:id="@+id/lblPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblHint"
        android:layout_alignBaseline="@id/txtPath"
        android:text="@string/editServiceDrivePath" />

    <EditText
        android:id="@+id/txtPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblHint"
        android:layout_toEndOf="@+id/lblPath"
        android:ems="10"
        android:text="/storage/emulated/0/mel/" />

    <Button
        android:id="@+id/btnPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPath"
        android:text="@string/editServiceDriveChoose"
        android:textAlignment="center" />

    <Space
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/btnPath" />

    <Button
        android:id="@+id/btnOptional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spacer"
        android:text="@string/editServiceDriveUnimportant"
        android:textAllCaps="false" />


    <RelativeLayout
        android:id="@+id/optionalContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/btnOptional"
        android:alpha="0"
        android:background="@color/colorOptionalBackground">

        <TextView
            android:id="@+id/lblMaxDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorLabelBackground"
            android:gravity="center_horizontal"
            android:text="@string/editServiceDriveMaxDays" />

        <EditText
            android:id="@+id/txtMaxDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblMaxDays"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:inputType="number"
            android:paddingBottom="8dp"
            android:text="30" />

        <TextView
            android:id="@+id/lblMaxSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtMaxDays"
            android:background="@color/colorLabelBackground"
            android:gravity="center_horizontal"
            android:text="@string/editServiceDriveMaxSize" />

        <SeekBar
            android:id="@+id/maxSizeSeekBar"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblMaxSize"
            android:layout_alignParentStart="true"
            android:max="1000"
            android:padding="5dp"
            android:progress="10" />

        <TextView
            android:id="@+id/lblPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/maxSizeSeekBar"
            android:layout_alignBaseline="@id/txtMaxSize"
            android:layout_toStartOf="@id/txtMaxSize"
            android:paddingEnd="5dp"
            android:text="0% = " />

        <EditText
            android:id="@+id/txtMaxSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/maxSizeSeekBar"
            android:layout_toStartOf="@id/lblMaxSizeUnit"
            android:inputType="number"
            android:text="1" />

        <TextView
            android:id="@+id/lblMaxSizeUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/maxSizeSeekBar"
            android:layout_alignBaseline="@id/txtMaxSize"
            android:layout_alignParentEnd="true"
            android:text="mb" />
    </RelativeLayout>

</RelativeLayout>